# django-dart-webdev

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: main.yml
django_dart_webdev/: middleware.py
tests/: Makefile  test_middleware.py  views.py
