[metadata]
name = django-dart-webdev
description = Django support for Dart webdev.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django, dart, webdev
author = Lex Berezhny
author-email = lex@damoti.com
url = https://github.com/damoti/django-dart-webdev
project_urls =
    Source=https://github.com/damoti/django-dart-webdev
    Tracker=https://github.com/damoti/django-dart-webdev/issues
platforms = any
license = BSD
license_file = LICENSE
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = django_dart_webdev
python_requires = >=3.7
install_requires =
    django
    requests

[options.extras_require]
testing =
    pexpect
    selenium
    coverage

[bdist_wheel]
universal = 1

[coverage:run]
branch = True

[coverage:paths]
source =
  django_dart_webdev
  .tox/*/lib/python*/site-packages/django_dart_webdev

[tox:tox]
envlist = py{37,38}-django{2,3}

[testenv]
passenv = HOME
deps =
  django2: django==2.0
  django3: django==3.0
extras = testing
changedir = {toxinidir}/tests
whitelist_externals = make
commands =
  make clean-django
  make generate
  coverage run -p --source={envsitepackagesdir}/django_dart_webdev manage.py test test_middleware
  coverage combine
